Add support for multiple distinct windows

--- a/package.json
+++ b/package.json
@@ -51,12 +51,17 @@
               "config": "./webpack.renderer.config.js",
               "entryPoints": [
                 {
-                  "html": "./src/renderer/index.html",
-                  "js": "./src/renderer/renderer.ts",
+                  "html": "./src/renderer/MainWindow/index.html",
+                  "js": "./src/renderer/MainWindow/renderer.ts",
                   "name": "main_window",
                   "preload": {
-                    "js": "./src/main/preload.ts"
+                    "js": "./src/main/MainWindow/preload.ts"
                   }
+                },
+                {
+                  "html": "./src/renderer/CaptureControlsWindow/index.html",
+                  "js": "./src/renderer/CaptureControlsWindow/renderer.ts",
+                  "name": "video_controls"
                 }
               ]
             }
