--- a/package.json
+++ b/package.json
@@ -96,9 +96,11 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
